@@ -60,6 +60,9 @@
 	Fixed directory-specific color scheme being lost on switching location
 	of views.
 
+	Fixed incorrect cursor positioning on reloading view with
+	directory-specific color scheme.
+
 0.10-beta to 0.10 (2018-11-11)
 
 	Display list of files in removal confirmation dialog.  Thanks to ovk.
